# daedalus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs  ecs.json  shader_types_hash
assets/shaders/: definitions.h  ray_tracing.metal  shader.air  shader.metal  shader.metallib  shader.metallibsym
src/: CMakeLists.txt  app.cpp  app.h  app.rs  app_delegate.cpp  app_delegate.h  camera.cpp  camera.h  first_person_camera.cpp  first_person_camera.h  game.cpp  game.h  main.cpp  main.rs  mtk_view_delegate.cpp  mtk_view_delegate.h  path_tracer.cpp  path_tracer.h  renderer.cpp  renderer.h  renderer.rs  scene.rs  shader_types.h  window.rs
src/core/: engine.rs  mod.rs  subsystem.rs  timer.rs
src/rendering/: camera.rs  light.rs  mod.rs  model.rs  renderer.rs
src/rendering/render_pass/: forward_render_pass.rs  mod.rs  pipeline.rs
src/rendering/shape/: cube.rs
src/resource/: mod.rs
src/resource/data/: material.rs  mesh.rs  mod.rs  vertex.rs
src/resource/importer/: gltf.rs  mod.rs
src/shader_types/: shader_types.h  wrapper.h
