[package]
name = "daedalus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.60.1"

[dependencies]
# render
cocoa = "0.24.0"
core-foundation = "0.9.3"
core-graphics-types = "0.1.1"
metal = "0.24.0"
objc = { package = "objc2", version = "0.2.7" }

# math
glam = "0.21.2"

# resource
gltf = "1.0.0"
image = "0.24.3"
uuid = { version = "1.1.2", features = ["v4"] }

# ecs
shipyard = { git = "https://github.com/leudz/shipyard", branch = "master", features = ["thread_local", "serde1"] }

# window
winit = "0.26.1"

serde = "1.0.140"
serde_json = "1.0.82"
once_cell = "1.13.0"
